new libs added, started args_mod

--- a/src/libs/CMakeLists.txt
+++ b/src/libs/CMakeLists.txt
@@ -2,6 +2,8 @@
 #    Add libraries
 #####################################################
 
+add_subdirectory(kindslib)
+add_subdirectory(linalglib)
 add_subdirectory(corelib)
 add_subdirectory(corecpplib)
 add_subdirectory(eampflib)
