--- a/src/libs/eampflib/CMakeLists.txt
+++ b/src/libs/eampflib/CMakeLists.txt
@@ -6,9 +6,13 @@
 add_library(eampflib STATIC)
 
 # Include corelib for mod files
+target_include_directories(eampflib PRIVATE ${CMAKE_BINARY_DIR}/libs/kindslib)
 target_include_directories(eampflib PRIVATE ${CMAKE_BINARY_DIR}/libs/corelib)
+target_include_directories(eampflib PRIVATE ${CMAKE_BINARY_DIR}/libs/atomlib)
 
 # Link libs
+target_link_libraries(eampflib kindslib)
+target_link_libraries(eampflib atomlib)
 target_link_libraries(eampflib corelib)
 target_link_libraries(eampflib corecpplib)
 
@@ -16,6 +20,7 @@ target_link_libraries(eampflib corecpplib)
 target_sources(eampflib PRIVATE
     banner_mod.f90
     eampf_mod.f90
+    input_file_mod.f90
 )
 
 
