--- a/src/libs/atomlib/CMakeLists.txt
+++ b/src/libs/atomlib/CMakeLists.txt
@@ -5,16 +5,19 @@
 # static atomlib
 add_library(atomlib STATIC)
 
-# Include corelib for mod files
+# Include mod files
+target_include_directories(atomlib PRIVATE ${CMAKE_BINARY_DIR}/libs/kindslib)
 target_include_directories(atomlib PRIVATE ${CMAKE_BINARY_DIR}/libs/corelib)
 
-# Link corelib
+# Link libraries
+target_link_libraries(atomlib kindslib)
 target_link_libraries(atomlib corelib)
 
 # Source files
 target_sources(atomlib PRIVATE
     labels_mod.f90
     config_mod.f90
+    configs_mod.f90
 )
 
 
